Add RHF compatibility

--- a/src/components/SelectSearchable/stories/SelectSearchable.docs.mdx
+++ b/src/components/SelectSearchable/stories/SelectSearchable.docs.mdx
@@ -33,7 +33,7 @@ selection, custom triggers, and large option sets.
 
   **Styling**
 
-  Exposes `data-part="root"` for easy custom styling.
+  Exposes `data-part='root'` for easy custom styling.
 </details>
 
 <Controls of={RootStories.Playground} />
@@ -63,7 +63,7 @@ selection, custom triggers, and large option sets.
 
   **Styling**
 
-  Exposes `data-part="trigger"` and `data-state="open | closed"` for easy custom styling.
+  Exposes `data-part='trigger'` and `data-state='open | closed'` for easy custom styling.
 </details>
 
 <Controls of={TriggerStories.Default} />
