--- a/src/Guide.mdx
+++ b/src/Guide.mdx
@@ -1,11 +1,16 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title='Guide' />
+<Meta title="Guide" />
 
-<div>
-  <div>
-    # Getting started
+# Guide
 
-    Welcome!
-  </div>
-</div>
+## Running Storybook locally
+
+```bash
+npm install
+npm run storybook
+```
+
+## Source Code
+
+[https://github.com/dqhendricks/react-component-library](https://github.com/dqhendricks/react-component-library)
