Add 5000 item list story

--- a/src/components/SelectSearchable/stories/SelectSearchable.docs.mdx
+++ b/src/components/SelectSearchable/stories/SelectSearchable.docs.mdx
@@ -505,6 +505,7 @@ Jump to: [Root](#root), [Label](#label), [Error](#error), [Trigger](#trigger), [
   ### Behavior
 
   - Automatically hides when it does not separate two visible options (for example: at list edges, stacked with other dividers, or adjacent to headers).
+  - If a divider is placed directly before a header, it will follow the visibility of that header.
   - Remains a purely visual structure element while options retain listbox semantics.
 
   ### Styling
