--- a/src/components/SelectSearchable/stories/SelectSearchable.docs.mdx
+++ b/src/components/SelectSearchable/stories/SelectSearchable.docs.mdx
@@ -149,7 +149,7 @@ Jump to: [Root](#root), [Label](#label), [Error](#error), [Trigger](#trigger), [
 
   ### Styling
 
-  Exposes `data-part='error'` and `data-invalid="true"` for easy custom styling.
+  Exposes `data-part='error'` and `data-invalid` for easy custom styling.
 
 </details>
 
@@ -203,6 +203,7 @@ Jump to: [Root](#root), [Label](#label), [Error](#error), [Trigger](#trigger), [
   Exposes:
   - `data-part='trigger'`
   - `data-state='open | closed'`
+  - `data-invalid`
 
   for easy custom styling.
 
@@ -278,7 +279,7 @@ Jump to: [Root](#root), [Label](#label), [Error](#error), [Trigger](#trigger), [
   - `data-state='open | closed'`
   - `data-placement='down | up'`
   - `data-owner='{triggerId}'`
-  - `data-invalid` when invalid
+  - `data-invalid`
 
 </details>
 
@@ -324,7 +325,7 @@ Jump to: [Root](#root), [Label](#label), [Error](#error), [Trigger](#trigger), [
 
   ### Styling
 
-  Exposes `data-part='search'` for easy custom styling.
+  Exposes `data-part='search'` and `data-invalid` for easy custom styling.
 
 </details>
 
